[package]
name = "osproxy-transport"
description = "Wire I/O: HTTP/1.1, HTTP/2, gRPC ingress, upstream connection pools, TLS, CryptoProvider."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[features]
# Exactly one crypto provider is compiled in (build-time selection, ADR-009).
default = ["non-fips"]
# Pure-Rust `ring` module: no native toolchain, fast dev/local builds. NOT FIPS.
non-fips = ["dep:ring", "tokio-rustls/ring"]
# CMVP-validated aws-lc-rs in FIPS mode. Builds AWS-LC-FIPS via cmake + C
# toolchain + Go. Build a FIPS artifact with `--no-default-features --features fips`.
fips = ["dep:aws-lc-rs", "tokio-rustls/fips"]

[dependencies]
osproxy-core.workspace = true
osproxy-spi.workspace = true
thiserror.workspace = true
hyper = { workspace = true, features = ["server", "http1", "http2"] }
hyper-util = { workspace = true, features = ["server", "server-auto", "service", "tokio"] }
http-body-util.workspace = true
bytes.workspace = true
tokio = { workspace = true, features = ["rt", "net", "sync", "time"] }
tokio-rustls.workspace = true
ring = { workspace = true, optional = true }
aws-lc-rs = { workspace = true, optional = true }
tonic.workspace = true
tonic-prost.workspace = true
prost.workspace = true
tokio-stream.workspace = true

[build-dependencies]
tonic-prost-build.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "net", "time"] }
hyper = { workspace = true, features = ["client"] }
hyper-util = { workspace = true, features = ["client", "client-legacy", "http1", "http2", "tokio"] }
tonic = { workspace = true, features = ["server", "router", "transport", "channel", "tls-ring"] }
rcgen.workspace = true
dhat = "0.3"
divan.workspace = true

[[bench]]
name = "classify"
harness = false

[lints]
workspace = true
